# cedica

./: README.md
admin/: .gitignore  README.md  forms.py  forms_jinetes.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
admin/src/core/: config.py  database.py  oauth.py  seeds.py  seeds_anuncios.py  seeds_usuarios.py
admin/src/core/anuncios/: __init__.py  anuncio.py
admin/src/core/auth/: __init__.py  user.py
admin/src/core/board/: user.py
admin/src/core/cobros/: __init__.py  cobro.py  cobro_forms.py
admin/src/core/contacto/: __init__.py  consulta.py
admin/src/core/ecuestre/: __init__.py  documento_form.py  ecuestre.py  ecuestre_form.py
admin/src/core/forms/: anuncios_forms.py  autenticacion_forms.py  cobro_forms.py  contacto_forms.py  ecuestre_documento_form.py  ecuestre_form.py  forms_documentos_jya.py  forms_jinetes.py  miembro_forms.py  pago_forms.py  usuario_forms.py  validaciones.py
admin/src/core/jinetes_y_amazonas/: __init__.py  documentos.py  forms_jinetes.py  jinetes_y_amazonas.py
admin/src/core/miembro/: __init__.py  domicilio.py  extras.py  forms_miembro.py  miembro.py
admin/src/core/pago/: __init__.py  pago.py  pago_forms.py
admin/src/core/usuarios/: __init__.py  solicitud.py  usuario.py  usuario_forms.py
admin/src/web/: __init__.py  helpers_jya.py  storage.py
admin/src/web/api/: api.py
admin/src/web/controllers/: anuncios.py  cobros.py  (+9 more)
admin/static/: error.css  style.css
admin/static/api/: tablaPrueba.json
admin/static/css/: input.css  output.css
admin/static/js/: tema.js
admin/tests/: test_home.py
(+178 files in other folders)
