[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Ignacio Escudero Gonzalez <nachoeg99@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
